center text and fix overflow

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* Main Style */
@@ -47,11 +48,15 @@ main {
   margin: 0 2rem;
   max-width: 500px;
   height: 400px;
+  max-height: 100%;
   text-align: center;
-  display: grid;
-  grid-template-rows: repeat(1fr, 5);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   border-radius: 5%;
   box-shadow: 0 0 20px var(--color1);
+  overflow: hidden;
 }
 
 /* Input Style */
@@ -67,6 +72,7 @@ main {
   border-radius: 10px;
   box-shadow: 0 0 20px var(--color2);
   transition: all 0.4s;
+  margin-bottom: 1rem;
 }
 
 .button {
